# VroomCloud

./: .gitignore  .pre-commit-config.yaml  Vagrantfile  dependencies.md  flake.nix  pnpm-lock.yaml
projects/demo-kong/: Cargo.toml  README.md
projects/demo-kong/demo-kong/: Cargo.toml
projects/demo-kong/demo-kong-common/: Cargo.toml
projects/demo-kong/demo-kong-common/src/: lib.rs
projects/demo-kong/demo-kong-ebpf/: Cargo.toml
projects/demo-kong/demo-kong-ebpf/src/: main.rs
projects/demo-kong/demo-kong-server/src/: main.rs
projects/demo-kong/demo-kong/src/: main.rs
projects/demo-kong/xtask/src/: build_ebpf.rs  run.rs
projects/final/frontend/: flake.nix  package.json  pnpm-lock.yaml  tailwind.config.js
projects/final/frontend/src/: hooks.server.ts
projects/final/frontend/src/lib/components/: Navbar.svelte  NewNodeModal.svelte  NodeCard.svelte
projects/final/frontend/src/routes/: +layout.server.ts  +layout.svelte  +page.svelte
