[package]
name = "demo-kong-common"
version = "0.1.0"
edition = "2021"

[features]
default = []
user = ["aya"]

[dependencies]
aya = { git = "https://github.com/aya-rs/aya", optional = true }
serde = { version = "1.0.193", features = ["derive"], default-features = false }

[lib]
path = "src/lib.rs"
