[package]
name = "demo-kong"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya = { git = "https://github.com/aya-rs/aya", features = ["async_tokio"] }
aya-log = { git = "https://github.com/aya-rs/aya" }
clap = { version = "4.1", features = ["derive"] }
demo-kong-common = { path = "../demo-kong-common", features = ["user"] }
anyhow = "1"
env_logger = "0.10"
libc = "0.2"
log = "0.4"
tokio = { version = "1.25", features = ["macros", "rt", "rt-multi-thread", "net", "signal"] }
actix-web = "4.4.0"
serde = { version = "1.0.193", features = ["derive"] }

[[bin]]
name = "demo-kong"
path = "src/main.rs"
